fixed app colors

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -189,7 +189,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.color.neutral.solid.hover}",
+                    "value": "{config.color.neutral.darken.hover}",
                     "space": "hsl"
                   }
                 }
@@ -202,7 +202,7 @@
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.color.neutral.solid.active}",
+                    "value": "{config.color.neutral.darken.active}",
                     "space": "hsl"
                   }
                 }
@@ -216,12 +216,12 @@
             },
             "hover": {
               "type": "color",
-              "value": "{app.color.surface.bg.low.default}",
+              "value": "{app.color.surface.bg.base.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.color.neutral.solid.hover}",
+                    "value": "{config.color.neutral.darken.hover}",
                     "space": "hsl"
                   }
                 }
@@ -229,12 +229,12 @@
             },
             "active": {
               "type": "color",
-              "value": "{app.color.surface.bg.low.default}",
+              "value": "{app.color.surface.bg.base.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.color.neutral.solid.active}",
+                    "value": "{config.color.neutral.darken.active}",
                     "space": "hsl"
                   }
                 }
@@ -248,12 +248,12 @@
             },
             "hover": {
               "type": "color",
-              "value": "{app.color.surface.bg.low.default}",
+              "value": "{app.color.surface.bg.high.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.color.neutral.solid.hover}",
+                    "value": "{config.color.neutral.darken.hover}",
                     "space": "hsl"
                   }
                 }
@@ -261,12 +261,12 @@
             },
             "active": {
               "type": "color",
-              "value": "{app.color.surface.bg.low.default}",
+              "value": "{app.color.surface.bg.high.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.color.neutral.solid.active}",
+                    "value": "{config.color.neutral.darken.active}",
                     "space": "hsl"
                   }
                 }
@@ -280,12 +280,12 @@
             },
             "hover": {
               "type": "color",
-              "value": "{app.color.surface.bg.low.default}",
+              "value": "{app.color.surface.bg.higher.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.color.neutral.solid.hover}",
+                    "value": "{config.color.neutral.darken.hover}",
                     "space": "hsl"
                   }
                 }
@@ -293,12 +293,12 @@
             },
             "active": {
               "type": "color",
-              "value": "{app.color.surface.bg.low.default}",
+              "value": "{app.color.surface.bg.higher.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
                     "type": "darken",
-                    "value": "{app.color.neutral.solid.active}",
+                    "value": "{config.color.neutral.darken.active}",
                     "space": "hsl"
                   }
                 }
@@ -318,7 +318,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "darken",
-                  "value": "{app.color.neutral.solid.hover}",
+                  "value": "{config.color.neutral.darken.hover}",
                   "space": "hsl"
                 }
               }
@@ -331,7 +331,7 @@
               "studio.tokens": {
                 "modify": {
                   "type": "darken",
-                  "value": "{app.color.neutral.solid.active}",
+                  "value": "{config.color.neutral.darken.active}",
                   "space": "hsl"
                 }
               }
