--- a/tokens/application dark.json
+++ b/tokens/application dark.json
@@ -38,7 +38,7 @@
           "base": {
             "default": {
               "type": "color",
-              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)"
+              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 5%)"
             },
             "hover": {
               "type": "color",
@@ -70,7 +70,7 @@
           "high": {
             "default": {
               "type": "color",
-              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 92%)"
+              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 10%)"
             },
             "hover": {
               "type": "color",
@@ -102,7 +102,7 @@
           "higher": {
             "default": {
               "type": "color",
-              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 88%)"
+              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 15%)"
             },
             "hover": {
               "type": "color",
@@ -135,7 +135,7 @@
         "border": {
           "default": {
             "type": "color",
-            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)"
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, 0.1)"
           },
           "hover": {
             "type": "color",
@@ -166,15 +166,15 @@
         },
         "fg": {
           "default": {
-            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 4%)",
+            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, 0.96)",
             "type": "color"
           },
           "inverted": {
-            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)",
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.96)",
             "type": "color"
           },
           "link": {
-            "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%)",
+            "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 60%)",
             "type": "color"
           }
         },
