--- a/tokens/application.json
+++ b/tokens/application.json
@@ -340,11 +340,11 @@
         },
         "fg": {
           "default": {
-            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 4%)",
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.96)",
             "type": "color"
           },
           "inverted": {
-            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)",
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 100%, 0.96)",
             "type": "color"
           },
           "link": {
