--- a/tokens/application.json
+++ b/tokens/application.json
@@ -657,11 +657,24 @@
               "x": "0",
               "y": "0",
               "blur": "0",
-              "spread": "4",
+              "spread": "0.25rem",
               "color": "{app.color.component.focus.focusRing.default}",
               "type": "dropShadow"
             }
           ],
+          "type": "boxShadow"
+        }
+      },
+      "surface": {
+        "default": {
+          "value": {
+            "x": "0",
+            "y": "4rem",
+            "blur": "4rem",
+            "spread": "0",
+            "color": "{app.color.surface.shadow.default}",
+            "type": "dropShadow"
+          },
           "type": "boxShadow"
         }
       }
