--- a/tokens/application dark.json
+++ b/tokens/application dark.json
@@ -180,7 +180,7 @@
         },
         "shadow": {
           "default": {
-            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.2)",
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 0%, 0.8)",
             "type": "color"
           }
         }
@@ -379,6 +379,34 @@
               "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.focusRing})"
             }
           }
+        }
+      }
+    },
+    "boxShadow": {
+      "focusRing": {
+        "default": {
+          "value": {
+            "x": "0",
+            "y": "0",
+            "blur": "0",
+            "spread": "0.25rem",
+            "color": "{app.color.component.focus.focusRing.default}",
+            "type": "dropShadow"
+          },
+          "type": "boxShadow"
+        }
+      },
+      "surface": {
+        "default": {
+          "value": {
+            "x": "",
+            "y": "4rem",
+            "blur": "4rem",
+            "spread": "0",
+            "color": "{app.color.surface.shadow.default}",
+            "type": "dropShadow"
+          },
+          "type": "boxShadow"
         }
       }
     }
