--- a/tokens/application dark.json
+++ b/tokens/application dark.json
@@ -190,7 +190,7 @@
           "bg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 60%)"
             },
             "translucent": {
               "type": "color",
@@ -200,7 +200,7 @@
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 30%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 60%)"
             },
             "translucent": {
               "type": "color",
@@ -210,7 +210,7 @@
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 30%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 60%)"
             },
             "onSolid": {
               "type": "color",
@@ -218,7 +218,7 @@
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 20%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 70%)"
             }
           }
         },
@@ -226,7 +226,7 @@
           "bg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 20%)"
+              "value": "hsl({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 90%)"
             },
             "translucent": {
               "type": "color",
@@ -236,7 +236,7 @@
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 20%)"
+              "value": "hsl({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 90%)"
             },
             "translucent": {
               "type": "color",
@@ -246,15 +246,15 @@
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 20%)"
+              "value": "{app.color.surface.fg.default}"
             },
             "onSolid": {
               "type": "color",
-              "value": "white"
+              "value": "{app.color.surface.fg.inverted}"
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 10%)"
+              "value": "{app.color.surface.fg.default}"
             }
           }
         },
