--- a/tokens/application.json
+++ b/tokens/application.json
@@ -420,15 +420,15 @@
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 20%)"
+              "value": "{app.color.surface.fg.default}"
             },
             "onSolid": {
               "type": "color",
-              "value": "white"
+              "value": "{app.color.surface.fg.inverted}"
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({config.color.secondary.hue.default}, {config.color.secondary.saturation.default}, 10%)"
+              "value": "{app.color.surface.fg.default}"
             }
           }
         },
