--- a/tokens/application.json
+++ b/tokens/application.json
@@ -657,6 +657,14 @@
               "x": "0",
               "y": "0",
               "blur": "0",
+              "spread": "2px",
+              "color": "{app.color.component.focus.border.default}",
+              "type": "innerShadow"
+            },
+            {
+              "x": "0",
+              "y": "0",
+              "blur": "0",
               "spread": "0.25rem",
               "color": "{app.color.component.focus.focusRing.default}",
               "type": "dropShadow"
