--- a/tokens/config.json
+++ b/tokens/config.json
@@ -114,6 +114,20 @@
           "value": "1.125rem",
           "type": "dimension"
         }
+      },
+      "surface": {
+        "radius": {
+          "value": "1rem",
+          "type": "dimension"
+        },
+        "gap": {
+          "value": "0.375rem",
+          "type": "dimension"
+        },
+        "padding": {
+          "value": "1rem",
+          "type": "dimension"
+        }
       }
     },
     "color": {
