--- a/tokens/application.json
+++ b/tokens/application.json
@@ -90,7 +90,7 @@
       "label": {
         "height": {
           "sm": {
-            "value": "{app.dimension.label.height.md} - 0.5rem",
+            "value": "{app.dimension.label.height.md} - 0.25rem",
             "type": "dimension"
           },
           "md": {
@@ -98,7 +98,7 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.label.height.md} + 0.5rem",
+            "value": "{app.dimension.label.height.md} + 0.25rem",
             "type": "dimension"
           }
         },
@@ -112,7 +112,7 @@
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.control.padding.md} + 0.25rem",
+            "value": "{app.dimension.label.padding.md} + 0.25rem",
             "type": "dimension"
           }
         },
@@ -122,7 +122,7 @@
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.control.gap}",
+            "value": "{config.dimension.label.gap}",
             "type": "dimension"
           },
           "lg": {
@@ -132,15 +132,15 @@
         },
         "radius": {
           "sm": {
-            "value": "{app.dimension.control.radius.md} - 0.25rem",
+            "value": "{app.dimension.label.radius.md} - 0.25rem",
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.control.radius}",
+            "value": "{config.dimension.label.radius}",
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.control.radius.md} + 0.25rem",
+            "value": "{app.dimension.label.radius.md} + 0.25rem",
             "type": "dimension"
           }
         },
@@ -160,15 +160,15 @@
         },
         "symbol": {
           "sm": {
-            "value": "{app.dimension.control.symbol.md} - 0.125rem",
+            "value": "{app.dimension.label.symbol.md} - 0.125rem",
             "type": "dimension"
           },
           "md": {
-            "value": "{config.dimension.control.symbol}",
+            "value": "{config.dimension.label.symbol}",
             "type": "dimension"
           },
           "lg": {
-            "value": "{app.dimension.control.symbol.md} + 0.125rem",
+            "value": "{app.dimension.label.symbol.md} + 0.125rem",
             "type": "dimension"
           }
         }
