--- a/tokens/application.json
+++ b/tokens/application.json
@@ -646,8 +646,8 @@
         "text": {
           "value": {
             "fontFamily": "{config.fontFamily.ui}",
-            "fontWeight": "{config.fontWeight.medium}",
-            "lineHeight": "120%",
+            "fontWeight": "{config.fontWeight.semibold}",
+            "lineHeight": "100%",
             "fontSize": "{config.fontSize.base}"
           },
           "type": "typography"
@@ -697,7 +697,7 @@
       "label": {
         "text": {
           "sm": {
-            "value": "{app.fontSize.label.text.md} - 0.125rem",
+            "value": "{app.fontSize.label.text.md} - 0.0625rem",
             "type": "fontSizes"
           },
           "md": {
@@ -705,13 +705,13 @@
             "type": "fontSizes"
           },
           "lg": {
-            "value": "{app.fontSize.label.text.md} + 0.125rem",
+            "value": "{app.fontSize.label.text.md} + 0.0625rem",
             "type": "fontSizes"
           }
         },
         "symbol": {
           "sm": {
-            "value": "{app.fontSize.label.symbol.md} - 0.125rem",
+            "value": "{app.fontSize.label.symbol.md} - 0.0625rem",
             "type": "fontSizes"
           },
           "md": {
@@ -719,7 +719,7 @@
             "type": "fontSizes"
           },
           "lg": {
-            "value": "{app.fontSize.label.symbol.md} + 0.125rem",
+            "value": "{app.fontSize.label.symbol.md} + 0.0625rem",
             "type": "fontSizes"
           }
         }
@@ -748,7 +748,7 @@
       },
       "label": {
         "default": {
-          "value": "0%",
+          "value": "2%",
           "type": "letterSpacing"
         },
         "nums": {
