--- a/tokens/config.json
+++ b/tokens/config.json
@@ -167,6 +167,12 @@
             "value": "0.5",
             "type": "other"
           }
+        },
+        "lighten": {
+          "default": {
+            "value": "0.8",
+            "type": "other"
+          }
         }
       },
       "secondary": {
