--- a/tokens/config.json
+++ b/tokens/config.json
@@ -211,6 +211,12 @@
             "value": "0.6",
             "type": "other"
           }
+        },
+        "lighten": {
+          "default": {
+            "value": "0.8",
+            "type": "other"
+          }
         }
       },
       "neutral": {
