--- a/tokens/config.json
+++ b/tokens/config.json
@@ -255,6 +255,12 @@
             "value": "0.35",
             "type": "other"
           }
+        },
+        "lighten": {
+          "default": {
+            "value": "0.8",
+            "type": "other"
+          }
         }
       },
       "danger": {
@@ -291,6 +297,12 @@
           },
           "active": {
             "value": "0.6",
+            "type": "other"
+          }
+        },
+        "lighten": {
+          "default": {
+            "value": "0.8",
             "type": "other"
           }
         }
@@ -335,6 +347,12 @@
             "value": "{config.color.info.alpha.active} + 0.1",
             "type": "other"
           }
+        },
+        "lighten": {
+          "default": {
+            "value": "0.8",
+            "type": "other"
+          }
         }
       },
       "success": {
@@ -371,6 +389,18 @@
           },
           "active": {
             "value": "0.6",
+            "type": "other"
+          }
+        },
+        "lighten": {
+          "default": {
+            "value": "0.8",
+            "type": "other"
+          }
+        },
+        "warning": {
+          "default": {
+            "value": "0.8",
             "type": "other"
           }
         }
