--- a/tokens/application.json
+++ b/tokens/application.json
@@ -795,7 +795,7 @@
           "value": "0%",
           "type": "letterSpacing"
         },
-        "nums": {
+        "number": {
           "value": "2%",
           "type": "letterSpacing"
         }
@@ -805,7 +805,7 @@
           "value": "2%",
           "type": "letterSpacing"
         },
-        "nums": {
+        "number": {
           "value": "8%",
           "type": "letterSpacing"
         }
