--- a/tokens/application.json
+++ b/tokens/application.json
@@ -562,7 +562,7 @@
             },
             "onSolid": {
               "type": "color",
-              "value": "white"
+              "value": "{app.color.surface.fg.inverted}"
             },
             "onTranslucent": {
               "type": "color",
