--- a/tokens/application.json
+++ b/tokens/application.json
@@ -791,7 +791,7 @@
     },
     "letterSpacing": {
       "control": {
-        "default": {
+        "text": {
           "value": "0%",
           "type": "letterSpacing"
         },
@@ -801,7 +801,7 @@
         }
       },
       "label": {
-        "default": {
+        "text": {
           "value": "2%",
           "type": "letterSpacing"
         },
