--- a/tokens/config.json
+++ b/tokens/config.json
@@ -145,6 +145,10 @@
           }
         },
         "darken": {
+          "default": {
+            "value": "0.2",
+            "type": "other"
+          },
           "hover": {
             "value": "0.2",
             "type": "other"
@@ -189,6 +193,14 @@
           }
         },
         "darken": {
+          "default": {
+            "value": "0.2",
+            "type": "other"
+          },
+          "default1": {
+            "value": "-0.2",
+            "type": "other"
+          },
           "hover": {
             "value": "0.2",
             "type": "other"
@@ -233,6 +245,10 @@
           }
         },
         "darken": {
+          "default": {
+            "value": "0.1",
+            "type": "other"
+          },
           "hover": {
             "value": "0.1",
             "type": "other"
@@ -277,6 +293,10 @@
           }
         },
         "darken": {
+          "default": {
+            "value": "0.1",
+            "type": "other"
+          },
           "hover": {
             "value": "0.1",
             "type": "other"
@@ -321,6 +341,10 @@
           }
         },
         "darken": {
+          "default": {
+            "value": "-0.2",
+            "type": "other"
+          },
           "hover": {
             "value": "0.2",
             "type": "other"
@@ -369,6 +393,10 @@
           }
         },
         "darken": {
+          "default": {
+            "value": "0.1",
+            "type": "other"
+          },
           "hover": {
             "value": "0.1",
             "type": "other"
@@ -419,6 +447,10 @@
           }
         },
         "darken": {
+          "default": {
+            "value": "0.1",
+            "type": "other"
+          },
           "hover": {
             "value": "0.1",
             "type": "other"
