--- a/tokens/application.json
+++ b/tokens/application.json
@@ -454,7 +454,7 @@
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 30%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 35%)"
             },
             "onSolid": {
               "type": "color",
@@ -516,7 +516,7 @@
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 30%)"
+              "value": "hsl({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 45%)"
             },
             "translucent": {
               "type": "color",
@@ -526,15 +526,15 @@
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 30%)"
+              "value": "hsl({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 40%)"
             },
             "onSolid": {
               "type": "color",
-              "value": "white"
+              "value": "{app.color.surface.fg.inverted}"
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 20%)"
+              "value": "hsl({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 25%)"
             }
           }
         },
@@ -562,7 +562,7 @@
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.info.hue.default}, {config.color.info.saturation.default}, 30%)"
+              "value": "hsl({config.color.info.hue.default}, {config.color.info.saturation.default}, 35%)"
             },
             "onSolid": {
               "type": "color",
