onDefault config alpha

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -163,6 +163,10 @@
             "value": "0.3",
             "type": "other"
           },
+          "onDefault": {
+            "value": "0.2",
+            "type": "other"
+          },
           "hover": {
             "value": "0.4",
             "type": "other"
@@ -209,6 +213,10 @@
         "alpha": {
           "default": {
             "value": "0.4",
+            "type": "other"
+          },
+          "onDefault": {
+            "value": "0.2",
             "type": "other"
           },
           "hover": {
@@ -259,6 +267,10 @@
             "value": "0.15",
             "type": "other"
           },
+          "onDefault": {
+            "value": "0.2",
+            "type": "other"
+          },
           "hover": {
             "value": "0.25",
             "type": "other"
@@ -307,6 +319,10 @@
             "value": "0.4",
             "type": "other"
           },
+          "onDefault": {
+            "value": "0.2",
+            "type": "other"
+          },
           "hover": {
             "value": "0.5",
             "type": "other"
@@ -353,6 +369,10 @@
         "alpha": {
           "default": {
             "value": "0.3",
+            "type": "other"
+          },
+          "onDefault": {
+            "value": "0.2",
             "type": "other"
           },
           "hover": {
@@ -407,6 +427,10 @@
             "value": "0.4",
             "type": "other"
           },
+          "onDefault": {
+            "value": "0.2",
+            "type": "other"
+          },
           "hover": {
             "value": "0.5",
             "type": "other"
@@ -445,6 +469,10 @@
         "darken": {
           "default": {
             "value": "0.1",
+            "type": "other"
+          },
+          "onDefault": {
+            "value": "0.2",
             "type": "other"
           },
           "hover": {
