--- a/tokens/application.json
+++ b/tokens/application.json
@@ -686,7 +686,8 @@
           "value": {
             "fontFamily": "{config.fontFamily.symbol}",
             "fontWeight": "{config.fontWeight.medium}",
-            "fontSize": "{config.fontSize.base}"
+            "fontSize": "{config.fontSize.label}",
+            "lineHeight": "120%"
           },
           "type": "typography"
         }
@@ -697,7 +698,7 @@
             "fontFamily": "{config.fontFamily.ui}",
             "fontWeight": "{config.fontWeight.semibold}",
             "lineHeight": "100%",
-            "fontSize": "{config.fontSize.base}"
+            "fontSize": "{config.fontSize.label}"
           },
           "type": "typography"
         },
@@ -706,7 +707,7 @@
             "fontFamily": "{config.fontFamily.uiAlt}",
             "fontWeight": "{config.fontWeight.medium}",
             "lineHeight": "100%",
-            "fontSize": "{config.fontSize.base}"
+            "fontSize": "{config.fontSize.label}"
           },
           "type": "typography"
         },
@@ -715,7 +716,7 @@
             "fontFamily": "{config.fontFamily.symbol}",
             "fontWeight": "{config.fontWeight.medium}",
             "lineHeight": "120%",
-            "fontSize": "{config.fontSize.base}"
+            "fontSize": "{config.fontSize.label}"
           },
           "type": "typography"
         }
