--- a/tokens/application.json
+++ b/tokens/application.json
@@ -695,6 +695,42 @@
               "value": "hsl({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 25%)"
             }
           }
+        },
+        "success": {
+          "bg": {
+            "solid": {
+              "type": "color",
+              "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.default}, 45%)"
+            },
+            "translucent": {
+              "type": "color",
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 45%, {config.color.danger.alpha.default})"
+            }
+          },
+          "border": {
+            "solid": {
+              "type": "color",
+              "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.default}, 40%)"
+            },
+            "translucent": {
+              "type": "color",
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 40%, {config.color.secondary.alpha.default})"
+            }
+          },
+          "fg": {
+            "solid": {
+              "type": "color",
+              "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.default}, 35%)"
+            },
+            "onSolid": {
+              "type": "color",
+              "value": "{app.color.surface.fg.inverted}"
+            },
+            "onTranslucent": {
+              "type": "color",
+              "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.default}, 20%)"
+            }
+          }
         }
       }
     },
