--- a/tokens/config.json
+++ b/tokens/config.json
@@ -71,6 +71,20 @@
       }
     },
     "dimension": {
+      "surface": {
+        "radius": {
+          "value": "1rem",
+          "type": "dimension"
+        },
+        "gap": {
+          "value": "0.375rem",
+          "type": "dimension"
+        },
+        "padding": {
+          "value": "1rem",
+          "type": "dimension"
+        }
+      },
       "control": {
         "radius": {
           "value": "1rem",
@@ -115,17 +129,13 @@
           "type": "dimension"
         }
       },
-      "surface": {
+      "dot": {
         "radius": {
-          "value": "1rem",
+          "value": "0.75rem",
           "type": "dimension"
         },
-        "gap": {
-          "value": "0.375rem",
-          "type": "dimension"
-        },
-        "padding": {
-          "value": "1rem",
+        "height": {
+          "value": "1.5rem",
           "type": "dimension"
         }
       }
