--- a/tokens/config.json
+++ b/tokens/config.json
@@ -86,12 +86,12 @@
         }
       },
       "control": {
-        "radius": {
-          "value": "1rem",
-          "type": "dimension"
-        },
         "height": {
           "value": "3rem",
+          "type": "dimension"
+        },
+        "radius": {
+          "value": "1rem",
           "type": "dimension"
         },
         "gap": {
@@ -129,13 +129,13 @@
           "type": "dimension"
         }
       },
-      "dot": {
-        "radius": {
-          "value": "0.75rem",
-          "type": "dimension"
-        },
+      "status": {
         "height": {
           "value": "1.5rem",
+          "type": "dimension"
+        },
+        "radius": {
+          "value": "0.75rem",
           "type": "dimension"
         }
       }
